FIX:햄버거 메뉴 클릭 시 헤더 밀림 수정 / media query로 html, body에 overflow-x: hidden 적용(모바일 반응 시 우측 여백 제거)

--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -2,21 +2,12 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
 
-* {
-  /* max-width: 1280px; */
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  width: 100%;
-  overflow-x: hidden;
-}
-
 /* COMMON */
 body {
+  margin: 0;
+  padding: 0;
+  border: 1px solid red;
+  box-sizing: border-box;
   color: #333;
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
@@ -877,8 +868,9 @@ footer .inner .footer_detail .footer_copy {
 }
 /* footer */
 
-@media screen and (max-width: 1677px) {
-  .header ul li {
-    /* width: 220px; */
+@media screen and (max-width: 1200px) {
+  html,
+  body {
+    overflow-x: hidden;
   }
 }
