--- a/src/components/modal/MenuModal.module.css
+++ b/src/components/modal/MenuModal.module.css
@@ -5,6 +5,8 @@
 @import url("https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css");
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -23,6 +25,7 @@ body {
   left: 0;
   z-index: 50;
   background-color: rgba(0, 0, 0, 0.8);
+  overflow-x: hidden;
 }
 
 .modal {
